style: update CSS to change border color of fixed-cell class to MediumSeaGreen for better visibility refactor: reorganize Anki card templates by adding missing table structures for consistent layout and better readability

--- a/basic-20240218092126/Styling.css
+++ b/basic-20240218092126/Styling.css
@@ -207,7 +207,7 @@ border-top: 1px solid MediumSeaGreen; /* Устанавливаем зелены
 
 .fixed-cell {
   height: 20px; /* Высота ячейки (можно изменить) */
-  border: 1px solid #ccc; /* Граница ячейки */
+  border: 1px solid MediumSeaGreen; /* Граница ячейки */
   vertical-align: middle; /* Вертикальное выравнивание содержимого */
   padding: 10px; /* Отступы в ячейке */
 }
